Fix footer extra space.

--- a/guide/css/main.css
+++ b/guide/css/main.css
@@ -471,6 +471,7 @@ body>footer {
     font-size: 0.7em;
     font-weight: 100;
     padding: 3em 0 1ex;
+    margin: 0;
 }
 
 
